tests/toy/neg/000277_mutation.toylang
program a = { else a do sleep; } .
